[gd_scene load_steps=5 format=3 uid="uid://d4mikmfla8fj5"]

[ext_resource type="Script" path="res://Scripts/torpedo.gd" id="1_pqnjh"]
[ext_resource type="PackedScene" uid="uid://did1lmobv5wea" path="res://Scenes/hitBox.tscn" id="2_jjrr2"]
[ext_resource type="PackedScene" uid="uid://ccp1hjpu5m76v" path="res://Scenes/disabel_hurtbox.tscn" id="3_jjr8p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3iofs"]
radius = 16.0

[node name="Torpedo" type="Node2D"]
script = ExtResource("1_pqnjh")
duration = 0.5
dodgeSpeed = 300.0
wut = 10

[node name="HitBox" parent="." instance=ExtResource("2_jjrr2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
z_index = 2
shape = SubResource("CircleShape2D_3iofs")
disabled = true
debug_color = Color(0.499785, 0, 0.0321371, 0.42)

[node name="durationTimer" type="Timer" parent="."]
one_shot = true

[node name="DisabelHurtbox" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("3_jjr8p")]
parent = NodePath("..")
